--- a/furniture_Sales_Management/src/view/ProfilePage.form
+++ b/furniture_Sales_Management/src/view/ProfilePage.form
@@ -23,32 +23,40 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="UserLbl" min="-2" max="-2" attributes="0"/>
                   <Component id="NameLbl" min="-2" max="-2" attributes="0"/>
                   <Component id="IdLbl" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="GenderLbl" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="PassLbl" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="EmailLbl" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="UserLbl" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="IdTxt" alignment="0" max="32767" attributes="0"/>
-                  <Component id="ProfileLbl" alignment="0" max="32767" attributes="0"/>
-                  <Component id="NameTxt" alignment="0" pref="160" max="32767" attributes="0"/>
-                  <Component id="EmailTxt" alignment="0" max="32767" attributes="0"/>
-                  <Component id="GenderTxt" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="UserTxt" alignment="0" max="32767" attributes="0"/>
-                  <Component id="PassTxt" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="PassBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="59" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="BackBtn" pref="79" max="32767" attributes="0"/>
-                  <Component id="EditBtn" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="UserTxt" min="-2" pref="160" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="EditBtn" min="-2" pref="79" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="IdTxt" alignment="0" max="32767" attributes="0"/>
+                          <Component id="ProfileLbl" alignment="0" max="32767" attributes="0"/>
+                          <Component id="NameTxt" alignment="0" pref="160" max="32767" attributes="0"/>
+                          <Component id="EmailTxt" alignment="0" max="32767" attributes="0"/>
+                          <Component id="GenderTxt" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PassTxt" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="PassBtn" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="47" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="BackBtn" pref="79" max="32767" attributes="0"/>
+                          <Component id="DeleteBtn" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
           </Group>
@@ -75,27 +83,31 @@
                   <Component id="EmailTxt" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="GenderLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="GenderTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="UserLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="UserTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="PassLbl" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="PassTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="EditBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="GenderLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="GenderTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="PassBtn" alignment="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="DeleteBtn" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="12" max="32767" attributes="0"/>
-              <Component id="BackBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="EditBtn" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="UserLbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="UserTxt" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PassLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="PassTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="PassBtn" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="BackBtn" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="48" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -239,6 +251,17 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PassBtnActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="DeleteBtn">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Century Gothic" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Delete"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DeleteBtnActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
