--- a/furniture_Sales_Management/src/view/CreateQuotation1.form
+++ b/furniture_Sales_Management/src/view/CreateQuotation1.form
@@ -20,11 +20,12 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="tfQuotationID" min="-2" pref="82" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="cbQuotationID" min="-2" pref="43" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Component id="cbQuotationID" min="-2" pref="84" max="-2" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <Component id="btnCreate" min="-2" max="-2" attributes="0"/>
