--- a/furniture_Sales_Management/src/view/MainPage.form
+++ b/furniture_Sales_Management/src/view/MainPage.form
@@ -17,8 +17,6 @@
         </DimensionLayout>
       </Layout>
     </Container>
-    <Component class="view.OfficerApproval" name="officerApproval1">
-    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -77,7 +75,6 @@
                           <Component id="rolelbl" min="-2" pref="168" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
                           <Component id="ProfileBtn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -92,6 +89,7 @@
                           <Component id="Tabs" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -105,9 +103,9 @@
                       <Component id="rolelbl" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                       <Component id="ProfileBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="jobMainbtn1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                           <Component id="jobMainbtn2" min="-2" max="-2" attributes="0"/>
@@ -119,10 +117,10 @@
                           <Component id="jobMainbtn5" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="LogoutBtn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="Tabs" max="32767" attributes="0"/>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
